# betsports

./: .dev-docker.env  .docker-dev.env  .docker-prd.env  .docker-tst.env  .dockerenv  .dockerignore  .env  .gitignore  .python-version  Dockerfile  Dockerfile-broker  README.md  docker-compose.yml  pyproject.toml  pytest.ini  rabbitmq.conf  requirements.txt  results.csv  start.sh  startapp.sh  startworkers.sh
api/: serializers.py  urls.py  views.py
betsports/: .Dockerfile-rabbitmq  Dockerfile  README.md  celery.py  manage.py  settings.py  start.sh  startworkers.sh  urls.py  wsgi.py
betsports/api/: urls.py  views.py
betsports/betsports/: asgi.py
betsports/extractor/: resources.py  tasks.py
betsports/templates/: bets_portal.html  button.html  sync.html
betsports_/: .gitignore
data/: kelly.pkl  probs.pkl
extractor/: admin.py  models.py  poisson_f.py  tasks.py  views.py
extractor/apifootball/: api_etl.py  api_extractor.py  api_mapper.py
extractor/migrations/: 0001_initial.py  0002_bet_bookmaker_odds_bet_alter_odds_bookmaker.py  0005_alter_country_flag_alter_team_code_and_more.py  0007_alter_venue_address_alter_venue_surface.py  0008_alter_venue_city.py  0009_alter_team_venue.py  0013_rename_account_userconfig.py  0015_bet_field.py  0019_remove_odds_odds.py  0022_rename_field_betparameter_prob_name_and_more.py  0023_oddvalues_prob_name.py  0025_remove_odds_prob_name_betparameter.py  0030_alter_season_end_alter_season_start.py  0031_remove_betparameter_bookmaker.py  0033_alter_season_year.py  0034_userbets_userbetitems.py
front/: urls.py  views.py
frontend/: .gitignore  package-lock.json  package.json  svelte.config.js
frontend/project.inlang/: project_id
frontend/src/: app.html
staticfiles/: staticfiles.json
templates/: probs.html
templates/components/: bets_table.html  fab.html  info_bar.html  next_table.html
templates/templates/: _base.html  _base_footer.html  _base_sidebar.html  home.html  main_single_panel.html
tests/: betsports.dot
tests/test_apifootball/: conftest.py  test_apifootball.py  test_loader.py  test_mapper.py  test_odds.py  test_userbets.py
(+32 files in other folders)
